--- a/Restaurant.html
+++ b/Restaurant.html
@@ -15,7 +15,7 @@
         <div class="max-width">
             <div class="logo"><a href="#">Resta<span>urant</span></a></div>
             <ul class="menu">
-                <li><a href="../My Digital Portfolio/index.html">Portfolio</a></li>
+                <li><a href="https://rizzyi.github.io/Rizzyi.Final/">Portfolio</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
